--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ install:
   - cp contrib/env-sample .env
 
 before_script:
+  - pipenv lock
   - psql -c "CREATE DATABASE testdb;" -U postgres
 
 script:
