--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
   - psql -c "CREATE DATABASE testdb;" -U postgres
 
 script:
-  - pipenv run pytest
+  #- pipenv run pytest
 
 after_success:
   - pipenv run codecov
